# obsidian-mcp-server

./: .env.example  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/obsidian_mcp/: client.py  server.py
